--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,3 +1,3 @@
-<p>
-  nav works!
-</p>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand text-white" routerLink="">Role Managment</a>
+</nav>
