--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/ng-snotify/styles/material.css';
+
+.modal {
+
+  overflow-y: scroll;
+}
