--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-sidenav></app-sidenav>
-<!-- <app-nav></app-nav> -->
-<!-- <ng-snotify></ng-snotify> -->
-<!-- <router-outlet></router-outlet> -->
+<!-- <app-sidenav></app-sidenav> -->
+<app-nav></app-nav>
+<ng-snotify></ng-snotify>
+<router-outlet></router-outlet>
