--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,325 @@
-<p>
-  dashboard works!
-</p>
+<div class="content mt-3">
+  <div class="container-fluid">
+      <div class="row"><!--row begins-->
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-warning text-center">
+                                  <i class="ti-user"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Students</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="/users">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <div class="card">
+                <div class="content">
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <div class="icon-big icon-info text-center">
+                                <i class="ti-id-badge"></i>
+                            </div>
+                        </div>
+                        <div class="col-xs-7">
+                            <div class="numbers">
+                                <p><strong>Teachers</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <a routerLink="/users">
+                        <div class="footer">
+                        <hr />
+                        <div class="stats">
+                            <i class="ti-arrow-right"></i>View
+                        </div>
+                    </div>
+                </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+            <div class="card">
+                <div class="content">
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <div class="icon-big icon-warning text-center">
+                                <i class="ti-user"></i>
+                            </div>
+                        </div>
+                        <div class="col-xs-7">
+                            <div class="numbers">
+                                <p><strong>Parents</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="parents_view.php">
+                        <div class="footer">
+                        <hr />
+                        <div class="stats">
+                            <i class="ti-arrow-right"></i>View
+                        </div>
+                    </div>
+                </a>
+                </div>
+            </div>
+        </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-success text-center">
+                                  <i class="ti-wallet"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p> <strong>School Fees</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="/fees">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+      </div><!--row ends-->
+      <!--row begins-->
+          <div class="row">
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-warning text-center">
+                                  <i class="ti-harddrives"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Subjects</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="/subjects">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-danger text-center">
+                                  <i class="ti-blackboard"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Streams</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="/streams">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-success text-center">
+                                  <i class="ti-crown"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Classes</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="/classes">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-info text-center">
+                                  <i class="ti-bar-chart-alt"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Attendance</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a href="classattendance_view.php">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <!--row ends-->
+      </div>
+      <!--row begins-->
+          <div class="row">
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-warning text-center">
+                                  <i class="ti-layers-alt"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Timetables</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                     <a routerLink="timetables">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-danger text-center">
+                                  <i class="ti-announcement"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Notices</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="notices">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-primary text-center">
+                                  <i class="ti-cup"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Exam Results</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="results">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="card">
+                  <div class="content">
+                      <div class="row">
+                          <div class="col-xs-5">
+                              <div class="icon-big icon-primary text-center">
+                                  <i class="ti-location-arrow"></i>
+                              </div>
+                          </div>
+                          <div class="col-xs-7">
+                              <div class="numbers">
+                                  <p><strong>Student Location</strong></p>
+                              </div>
+                          </div>
+                      </div>
+                      <a routerLink="location">
+                          <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-arrow-right"></i>View
+                          </div>
+                      </div>
+                  </a>
+                  </div>
+              </div>
+          </div><!--row ends-->
+      </div>
+</div>
+</div>
