--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="parents_view.php">
+                    <a href="/parent">
                         <div class="footer">
                         <hr />
                         <div class="stats">
@@ -201,7 +201,7 @@
                               </div>
                           </div>
                       </div>
-                      <a href="classattendance_view.php">
+                      <a href="/classes">
                           <div class="footer">
                           <hr />
                           <div class="stats">
@@ -231,7 +231,7 @@
                               </div>
                           </div>
                       </div>
-                     <a routerLink="timetables">
+                     <a routerLink="/timetables">
                           <div class="footer">
                           <hr />
                           <div class="stats">
@@ -257,7 +257,7 @@
                               </div>
                           </div>
                       </div>
-                      <a routerLink="notices">
+                      <a routerLink="/notices">
                           <div class="footer">
                           <hr />
                           <div class="stats">
@@ -283,7 +283,7 @@
                               </div>
                           </div>
                       </div>
-                      <a routerLink="results">
+                      <a routerLink="/results">
                           <div class="footer">
                           <hr />
                           <div class="stats">
@@ -309,7 +309,7 @@
                               </div>
                           </div>
                       </div>
-                      <a routerLink="location">
+                      <a routerLink="/location">
                           <div class="footer">
                           <hr />
                           <div class="stats">
