--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="content mt-3">
   <div class="container-fluid">
-      <div class="row"><!--row begins-->
+      <div class="row" *ngIf="isAdmin || isTeacher"><!--row begins-->
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -16,7 +16,7 @@
                               </div>
                           </div>
                       </div>
-                      <a routerLink="/users">
+                      <a [routerLink]="['/users']" [queryParams]="{role: 'Student'}" >
                           <div class="footer">
                           <hr />
                           <div class="stats">
@@ -27,6 +27,7 @@
                   </div>
               </div>
           </div>
+
           <div class="col-lg-3 col-sm-6">
             <div class="card">
                 <div class="content">
@@ -42,7 +43,7 @@
                             </div>
                         </div>
                     </div>
-                    <a routerLink="/users">
+                    <a [routerLink]="['/users']" [queryParams]="{role: 'Teacher'}" >
                         <div class="footer">
                         <hr />
                         <div class="stats">
@@ -68,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/parent">
+                    <a [routerLink]="['/users']" [queryParams]="{role: 'Parent'}" >
                         <div class="footer">
                         <hr />
                         <div class="stats">
@@ -79,6 +80,7 @@
                 </div>
             </div>
         </div>
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -108,6 +110,7 @@
       </div><!--row ends-->
       <!--row begins-->
           <div class="row">
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -134,6 +137,7 @@
                   </div>
               </div>
           </div>
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -160,6 +164,7 @@
                   </div>
               </div>
           </div>
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -186,6 +191,7 @@
                   </div>
               </div>
           </div>
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -201,7 +207,7 @@
                               </div>
                           </div>
                       </div>
-                      <a href="/classes">
+                      <a href="/attendance">
                           <div class="footer">
                           <hr />
                           <div class="stats">
@@ -216,6 +222,7 @@
       </div>
       <!--row begins-->
           <div class="row">
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -242,6 +249,7 @@
                   </div>
               </div>
           </div>
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -268,6 +276,7 @@
                   </div>
               </div>
           </div>
+
           <div class="col-lg-3 col-sm-6">
               <div class="card">
                   <div class="content">
@@ -294,7 +303,8 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+
+          <div class="col-lg-3 col-sm-6" *ngIf="!isStudent">
               <div class="card">
                   <div class="content">
                       <div class="row">
